<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_search_24"
        android:visible="true"
        android:title=""
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_exporta"
        android:orderInCategory="100"
        android:title="@string/menu_exporta"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_export_pdf"
                android:orderInCategory="100"
                android:title="@string/menu_exporta_pdf" />
            <item
                android:id="@+id/menu_export_excel"
                android:orderInCategory="100"
                android:title="@string/menu_exporta_excel" />
        </menu>
    </item>
</menu>
