<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/outline_tile_small_24"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_item_deleted_fragment"
            android:icon="@drawable/ic_deleted_products"
            android:title="@string/product_deleted" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_config"
            android:title="@string/menu_profile_config" />

        <item android:title="">
            <menu >
                <item android:id="@+id/nav_payment"
                    android:icon="@drawable/ic_credit_card_24"
                    android:title="Assinatura"/>
            </menu>
        </item>
    </group>
</menu>