<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.rogger.bp.ui.home.view.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="uuid"
            app:argType="string" />
        <action
            android:id="@+id/action_nav_home_to_nav_edit_fragment"
            app:destination="@id/nav_edit_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_nav_home_to_nav_show_fragment"
            app:destination="@id/nav_show_fragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_nav_home_to_nav_barcode_scan_fragment"
            app:destination="@id/nav_barcode_scan_fragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_nav_home_to_nav_add_fragment"
            app:destination="@id/nav_add_fragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_search"
        android:name="com.rogger.bp.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_search_to_barcode_scanner"
            app:destination="@id/nav_barcode_scan_fragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_nav_search_to_nav_edit_fragment"
            app:destination="@id/nav_edit_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />
    </fragment>
    <fragment
        android:id="@+id/nav_edit_fragment"
        android:name="com.rogger.bp.ui.edit.view.EditFragment"
        android:label="@string/edit"
        tools:layout="@layout/fragment_edit">
        <argument
            android:name="uuid"
            app:argType="string" />
        <action
            android:id="@+id/action_editFragment_to_galerryFragment"
            app:destination="@id/nav_gallery_fragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_editFragment_to_nav_barcode_show"
            app:destination="@id/nav_barcode_show"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/nav_add_fragment"
        android:name="com.rogger.bp.ui.add.view.AddItemFragment"
        android:label="Adicionar Produto">

        <argument
            android:name="key_barcode"
            app:argType="string" />

        <argument
            android:name="nameCategory"
            app:argType="string" />

        <argument
            android:name="categoria_id"
            android:defaultValue="-1"
            app:argType="string" />
        <action
            android:id="@+id/action_addFragment_to_nav_gallery_fragment"
            app:destination="@id/nav_gallery_fragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/nav_show_fragment"
        android:name="com.rogger.bp.ui.home.view.ShowFragment"
        android:label=""
        tools:layout="@layout/fragment_show">
        <argument
            android:name="imageUri"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/nav_item_deleted_fragment"
        android:name="com.rogger.bp.ui.deleteitem.view.ItemDeletedFragment"
        android:label="@string/delete_item"
        tools:layout="@layout/fragment_item_deleted" />
    <fragment
        android:id="@+id/nav_barcode_scan_fragment"
        android:name="com.rogger.bp.ui.scanner.BarcodeScanFragment"
        android:label="Scanner">
        <argument
            android:name="categoria_nome"
            app:argType="string" />

        <argument
            android:name="categoria_id"
            android:defaultValue="0"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/nav_barcode_show"
        android:name="com.rogger.bp.ui.edit.view.ImageBarcodeShow"
        android:label="Codigo de barras"
        tools:layout="@layout/image_barcode_show">
        <argument
            android:name="edtF_barcode"
            app:argType="string" />
    </fragment>


    <fragment
        android:id="@+id/nav_gallery_fragment"
        android:name="com.rogger.bp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.rogger.bp.ui.category.view.AddEditCategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_add_edit_category">
        <argument
            android:name="categoria_nome"
            app:argType="string" />
        <argument
            android:name="categoria_id"
            app:argType="string" />
        <action
            android:id="@+id/action_nav_category_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.rogger.bp.ui.profile.ProfileFragment"
        android:label="@string/menu_profile_config"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_nav_profile_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_payment"
        android:name="com.rogger.bp.ui.payment.PayFragment"
        android:label="@string/menu_payment"
        tools:layout="@layout/fragment_pay">
        <action
            android:id="@+id/action_nav_profile_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <activity
        android:id="@+id/mainActivity"
        android:name="com.rogger.bp.MainActivity"
        android:label="app_bar_main"
        tools:layout="@layout/app_bar_main" />
</navigation>